# OddEngine

./: CMakeLists.txt  README
aodata/: _game.lua
code/: Animation.cpp  Animation.h  Game.cpp  Game.h  Image.cpp  Image.h  LuaValue.cpp  LuaValue.h  OddArchive.cpp  OddArchive.h  OddLevel.cpp  OddLevel.h  Renderer.cpp  Renderer.h  main.cpp  utils.cpp  utils.h
code/entities/: Entity.cpp  Entity.h  Entity_BackgroundAnim.cpp  Entity_BackgroundAnim.h  Entity_Bomb.cpp  Entity_Bomb.h  Entity_BoomMachine.cpp  Entity_BoomMachine.h  Entity_ElectricWall.cpp  Entity_ElectricWall.h  Entity_Eyeorb.cpp  Entity_Eyeorb.h  Entity_Lever.cpp  Entity_Lever.h  Entity_Mamorb.cpp  Entity_Mamorb.h  Entity_MeatSaw.cpp  Entity_MeatSaw.h  Entity_Mine.cpp  Entity_Mine.h  Entity_MotionDetector.cpp  Entity_MotionDetector.h  Entity_Mudokon.cpp  Entity_Mudokon.h  Entity_Pullring.cpp  Entity_Pullring.h  Entity_Scrab.cpp  Entity_Scrab.h  Entity_Slig.cpp  Entity_Slig.h  Entity_Slog.cpp  Entity_Slog.h  Entity_TimeBomb.cpp  Entity_TimeBomb.h  Entity_Trapdoor.cpp  Entity_Trapdoor.h
code/res/: Res.h  ResAnim.cpp  ResAnim.h  ResBits.cpp  ResBits.h  ResFG1.cpp  ResFG1.h  ResFont.cpp  ResFont.h  ResIndx.cpp  ResIndx.h  ResPalt.cpp  ResPalt.h  ResPath.cpp  ResPath.h
docs/: animations.txt  game_objects.txt  path_grid.txt  path_items.txt
